# workcheck

./: .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: attendance.py  auth.py  companies.py  users.py
app/core/: config.py  security.py
app/db/: __init__.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  attendance.py  company.py  user.py
app/schemas/: attendance.py  company.py  token.py  user.py
app/services/: attendance.py  company.py  user.py
app/utils/: geolocation.py  nfc.py  qr.py
docker/app/: Dockerfile
docker/nginx/: default.conf
